@@ -1,3 +1,8 @@
+2004-02-17  Richard Hult  <richard@imendio.com>
+
+	* src/drwright.c:
+	* src/drw-break-window.c: Merge from typing-monitor.
+
 2004-02-02  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Add auto option for dbus and default to that.
